# AVS.AI.Blueprint.AgenticService

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  CONTRIBUTING.md  DEBUG_TOOL_CALLING.md  Dockerfile  MIGRATION_PROGRESS.md  Plan.md  PyPI_Publish_Plan.md  RABBITMQ_SETUP.md  README.md  SIMPLIFICATION_OPTIONS.md  TASKS.md  TEST_UPDATE_SUMMARY.md  TODO.md  TROUBLESHOOTING.md  __init__.py  azure-pipelines-pypi.yml  azure-pipelines.yml  build-and-publish-pypi.yml  docker-compose.yml  mypy.output.txt  pyproject.toml  pytest.ini  rabbit_mq_received_event.json  start.sh  start_debug.sh  test_config_patterns.py  test_publish_event.py
.windsurf/: README.md
agent/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  settings.toml
agent/src/: README.md  __init__.py  main.py
agent/src/custom/: __init__.py
agent/src/custom/agent/: __init__.py  handlers.py  logic.py  runtime.py  tools.py
agent/src/custom/api/: README.md  __init__.py
agent/src/custom/models/: README.md  __init__.py  processing.py  resource.py  results.py
agent/src/custom/prompts/: README.md
agent/tests/integration/: test_pubsub_flow.py
agent/tests/mock-data/: health
agent/tests/unit/: test_decision.py  test_logic.py  test_models.py
base/: README.md  __init__.py  pyproject.toml
base/dapr/: subscriptions.yaml
base/dapr/components/: rabbitmq-pubsub.yaml
base/docs/: dapr-architecture.md  rest-api-design.md
base/src/: __init__.py  app.py  app_builder.py  config.py  startup.py  telemetry.py
base/src/agent/: __init__.py  agent_builder.py  agent_factory.py  base_agent.py  decision_engine.py  event_handler.py  logging_handler.py  model_provider.py  prompt_loader.py  response_handler.py  usage_limits.py
base/src/agent/providers/: __init__.py
base/src/api/: __init__.py  actuators.py  dapr.py  events.py  rest.py  root.py
base/src/config/: __init__.py  config.py  custom_logging.py  logging.py  telemetry.py
base/src/gateways/: data_gateway.py
base/src/handler/: __init__.py  decision_engine.py  event_handler.py  logging_handler.py
base/src/models/: __init__.py  api.py  asset.py  config.py  domain.py  errors.py  event_routing.py  events.py  result.py  status.py
base/src/registry/: __init__.py  agent_registry.py  component_registry.py  handler_registry.py  runtime_registry.py  service_registry.py
base/src/services/: __init__.py  event_publishing_service.py  health_check_service.py  processing_service.py
base/src/services/processing/: _event_publisher.py  _handler_chain.py  _health_checker.py  _result_builder.py
base/tests/unit/: test_agent_builder.py  test_agent_registry.py  test_component_registry.py  test_event_handler.py  test_event_publishing_service.py  test_health_check_service.py  test_processing_service.py  test_prompt_loader.py
examples/document_summarizer/: README.md  pyproject.toml  secrets.toml.example  settings.toml
examples/document_summarizer/src/: main.py
examples/document_summarizer/src/api/: routes.py
examples/document_summarizer/src/models/: schemas.py
examples/document_summarizer/src/prompts/: system.prompt
examples/document_summarizer/src/services/: summarizer_service.py
examples/document_summarizer/src/tools/: text_tools.py
examples/document_summarizer/tests/: test_summarizer_service.py  test_tools.py
examples/inventory_api/: README.md  pyproject.toml  settings.toml
examples/inventory_api/src/: main.py
examples/inventory_api/src/api/: routes.py
examples/inventory_api/src/models/: schemas.py
examples/inventory_api/src/services/: inventory_service.py
examples/inventory_api/tests/: test_inventory_service.py
examples/invoice_analyzer/: docker-compose.yml  pyproject.toml  settings.toml
examples/invoice_analyzer/src/: main.py
examples/invoice_analyzer/src/api/: README.md  rest.py
examples/invoice_analyzer/src/handlers/: __init__.py  simple_processor.py
examples/invoice_analyzer/src/models/: __init__.py  payloads.py  processing.py
examples/invoice_analyzer/src/services/: health_check_service.py
examples/invoice_analyzer/tests/unit/: test_logic.py
examples/order_event_pipeline/: README.md  pyproject.toml  settings.toml
examples/order_event_pipeline/src/: main.py
examples/order_event_pipeline/src/api/: routes.py
examples/order_event_pipeline/src/handlers/: order_enrichment_handler.py  order_validation_handler.py
examples/order_event_pipeline/src/models/: schemas.py
examples/order_event_pipeline/src/services/: order_service.py
examples/order_event_pipeline/tests/: test_handlers.py  test_order_service.py
examples/rest_microservice/: README.md  TODO.md  conftest.py  pyproject.toml  secrets.toml.example  settings.toml
examples/rest_microservice/src/: __init__.py  main.py
examples/rest_microservice/src/api/: __init__.py  routes.py
examples/rest_microservice/src/models/: __init__.py  schemas.py
examples/rest_microservice/src/services/: __init__.py  calculator.py
examples/rest_microservice/tests/: __init__.py  test_rest_routes.py  test_routes.py  test_services.py
examples/scheduler_example/: README.md  pyproject.toml  settings.toml
examples/scheduler_example/src/: __init__.py  main.py
examples/scheduler_example/src/api/: __init__.py  routes.py
examples/scheduler_example/src/models/: __init__.py  schemas.py
examples/scheduler_example/src/schedulers/: __init__.py  cleanup_scheduler.py  metrics_collector.py
examples/scheduler_example/src/services/: __init__.py  metrics_service.py
examples/scheduler_example/tests/: __init__.py  test_metrics_service.py  test_schedulers.py
examples/webhook_relay/: README.md  pyproject.toml  settings.toml
examples/webhook_relay/src/: main.py
examples/webhook_relay/src/api/: routes.py
examples/webhook_relay/src/handlers/: content_filter.py  metadata_enricher.py  webhook_normalizer.py
examples/webhook_relay/src/models/: schemas.py
examples/webhook_relay/src/services/: webhook_service.py
examples/webhook_relay/tests/: test_handlers.py  test_webhook_service.py
(+633 files in other folders)
