# Root pyproject.toml for the blueprint agents framework package

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avs-blueprint-agents"
version = "0.6.0a10"
description = "Microservice blueprint for creating agents"
authors = [
    { name = "Blueprint Team", email = "patrick.maue@bechtle.com" },
    { name = "Blueprint Team", email = "jan.weber@bechtle.com" }
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.44.0",
    "dynaconf>=3.2.12",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "cachetools>=5.3.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "dapr>=1.16.0",
    "python-multipart>=0.0.20",
    "apscheduler>=3.11.2",
    "diskcache-rs>=0.4.4",
    "nats-py>=2.13.1",
    "croniter>=6.0.0",
    "pytest",
    "pytest-asyncio"
]

[project.optional-dependencies]
ci = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "black>=25.9.0",
    "ruff>=0.14.4",
    "mypy>=1.18.2",
    "httpx>=0.28.1",
    "fakeredis>=2.26.0",
    "redis[hiredis]>=5.0.0",
]
redis = ["redis[hiredis]>=5.0.0"]
dev = [
    "avs-blueprint-agents[ci]",
    "debugpy>=1.8.17",
    "pre-commit>=4.0.0",
    "build>=1.3.0",
    "semver>=3.0.4",
]

[project.scripts]
asbs = "blueprint.agent_generator.cli.main:main"

[tool.setuptools]
packages = [
    "blueprint",
    "blueprint.agents",
    "blueprint.agents.agent",
    "blueprint.agents.clients",
    "blueprint.agents.clients.ai",
    "blueprint.agents.clients.io",
    "blueprint.agents.component",
    "blueprint.agents.config",
    "blueprint.agents.handler",
    "blueprint.agents.io",
    "blueprint.agents.io.api",
    "blueprint.agents.io.api.actuators",
    "blueprint.agents.io.api.actuators.health",
    "blueprint.agents.io.api.eventing",
    "blueprint.agents.io.api.scheduling",
    "blueprint.agents.io.api.utilities",
    "blueprint.agents.io.telemetry",
    "blueprint.agents.models",
    "blueprint.agents.services",
    "blueprint.agents.services.eventing",
    "blueprint.agents.services.infrastructure",
    "blueprint.agents.services.sessions",
    "blueprint.agents.utils",
    "blueprint.agent_generator",
    "blueprint.agent_generator.generator",
    "blueprint.agent_generator.generator.part_generators",
    "blueprint.agent_generator.cli",
    "blueprint.agent_generator.cli.commands",
    "blueprint.agent_generator.cli.utils",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"blueprint.agents" = ["py.typed"]
"blueprint.agent_generator" = ["base_files/**/*", "assistant_integrations/**/*", "claude_docs/**/*"]

[tool.black]
line-length = 140
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 140
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "dynaconf",
    "dynaconf.*",
    "diskcache_rs",
    "cachetools",
    "cachetools.*",
    "apscheduler.*",
    "croniter",
    "dapr.*",
    "nats.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redis", "redis.*", "fakeredis", "fakeredis.*"]
ignore_missing_imports = true

[tool.uv.workspace]
members = [
    "MyTestAgent",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "mypy>=1.18.2",
    "black>=25.9.0",
]
