# This file is only used for local development of the Agents Blueprints base.
# It should not be used for production deployments.

# When creating a new agent, the pyproject.toml file in custom/ should be used instead.

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avs-blueprint-agents"
version = "0.1.17"
description = "Microservice blueprint for creating agents"
authors = [
    {name = "Blueprint Team", email = "patrick.maue@bechtle.com"},
    {name = "Blueprint Team", email = "jan.weber@bechtle.com"}
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.12.0",
    "dynaconf>=3.2.12",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "dapr>=1.16.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.17",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "black>=25.9.0",
    "ruff>=0.14.4",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=3.5.0",
    "httpx>=0.28.1",
    "build>=1.3.0",
    "semver>=3.0.4",
]

[tool.setuptools]
packages = [
    "blueprint.agents",
    "blueprint.agents.agent",
    "blueprint.agents.agent.providers",
    "blueprint.agents.agent.providers.openai",
    "blueprint.agents.agent.providers.vllm",
    "blueprint.agents.api",
    "blueprint.agents.config",
    "blueprint.agents.gateways",
    "blueprint.agents.handler",
    "blueprint.agents.models",
    "blueprint.agents.registry",
    "blueprint.agents.services",
    "blueprint.agents.services.processing",
]

[tool.setuptools.package-dir]
"blueprint.agents" = "src"
"blueprint.agents.agent" = "src/agent"
"blueprint.agents.api" = "src/api"
"blueprint.agents.config" = "src/config"
"blueprint.agents.gateways" = "src/gateways"
"blueprint.agents.handler" = "src/handler"
"blueprint.agents.models" = "src/models"
"blueprint.agents.registry" = "src/registry"
"blueprint.agents.services" = "src/services"
"blueprint.agents.services.processing" = "src/services/processing"

[tool.black]
line-length = 140
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 140
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --ignore=docs/trials"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [
    "..",
    "src",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]
