[project]
name = "order-event-pipeline"
version = "0.1.0"
description = "E-commerce order processing pipeline using Blueprint Agents with Dapr pub/sub"
requires-python = ">=3.13"
dependencies = ["avs-blueprint-agents>=0.6.0a5"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=1.0.0", "httpx>=0.28.0"]

[tool.setuptools]
packages = ["src", "src.api", "src.services", "src.models"]

[tool.setuptools.package-dir]
"" = "."
