[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler-example"
version = "0.1.0"
description = "Scheduler example using the Blueprint Agents framework"
authors = [
    {name = "Blueprint Team", email = "patrick.maue@bechtle.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "avs-blueprint-agents>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
